<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/products_nav_graph"
    app:startDestination="@id/productListFragment">

    <fragment
        android:id="@+id/productListFragment"
        android:name="com.example.airlift_products_app.ui.ProductListFragment"
        android:label="@string/product_list_title"
        tools:layout="@layout/fragment_product_list" >
        <action
            android:id="@+id/action_productListFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
        <action
            android:id="@+id/action_productListFragment_to_addProductFragment"
            app:destination="@id/addProductFragment" />
    </fragment>
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.example.airlift_products_app.ui.ProductDetailsFragment"
        android:label="@string/product_details_title"
        tools:layout="@layout/fragment_product_details" >
        <argument
            android:name="product"
            app:argType="com.example.airlift_products_app.model.ProductResponse" />
    </fragment>
    <fragment
        android:id="@+id/addProductFragment"
        android:name="com.example.airlift_products_app.ui.AddProductFragment"
        android:label="@string/add_product_title" />
</navigation>