<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_ten"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_ten"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_ten"
                android:layout_marginTop="@dimen/dimen_sixty"
                android:layout_marginEnd="@dimen/dimen_ten"
                android:text="@string/add_new_product_title"
                android:textSize="@dimen/dimen_title"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_sixty"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_ten"
                android:layout_marginTop="@dimen/dimen_forty"
                android:layout_marginEnd="@dimen/dimen_ten"
                android:layout_marginBottom="@dimen/dimen_ten"
                android:gravity="center"
                android:hint="@string/product_title_hint_text"
                android:textColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtProductTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_sixty"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_ten"
                android:layout_marginTop="@dimen/dimen_ten"
                android:layout_marginEnd="@dimen/dimen_ten"
                android:layout_marginBottom="@dimen/dimen_ten"
                android:gravity="center"
                android:hint="@string/product_price_hint_text"
                android:textColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtProductPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_sixty"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_ten"
                android:layout_marginTop="@dimen/dimen_ten"
                android:layout_marginEnd="@dimen/dimen_ten"
                android:layout_marginBottom="@dimen/dimen_ten"
                android:gravity="center"
                android:hint="@string/product_category_hint_text"
                android:textColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtProductCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_sixty"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_ten"
                android:layout_marginTop="@dimen/dimen_ten"
                android:layout_marginEnd="@dimen/dimen_ten"
                android:layout_marginBottom="@dimen/dimen_ten"
                android:gravity="center"
                android:hint="@string/product_image_hint_text"
                android:textColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtProductImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_sixty"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_ten"
                android:layout_marginTop="@dimen/dimen_ten"
                android:layout_marginEnd="@dimen/dimen_ten"
                android:layout_marginBottom="@dimen/dimen_ten"
                android:gravity="center"
                android:hint="@string/product_description_hint_text"
                android:textColor="@android:color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtProductDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_sixty"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_ten"
                android:layout_marginTop="@dimen/dimen_twenty"
                android:layout_marginEnd="@dimen/dimen_ten"
                android:layout_marginBottom="@dimen/dimen_twenty"
                android:text="@string/save_text"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>